fix spacing

--- a/app/assets/stylesheets/components/_video_item.scss
+++ b/app/assets/stylesheets/components/_video_item.scss
@@ -2,14 +2,14 @@
 .vidx-background{
     background-color: rgb(249, 249, 249);
     height: 1200px;
-    width: 100%;
+    width: 99vw;
     //height: 1000%;
 }
 
 
 
 .vidx-eachvideo{
-    width: 100%;
+    width: 95vw;
     font-family: 'Roboto', sans-serif;
     display: grid;
     grid-template-columns: 360px 360px 360px 360px 360px;
